Libreria RichFaces Impl 3.3.4 Eliminate risorse per la generazione della versioneper JSF 2.x.