@@ -18,6 +18,11 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
  */
+/*
+ * Modificato da Link.it (https://link.it) per applicazione patch di sicurezza
+ * 
+ * Copyright (c) 2022-2023 Link.it srl (https://link.it). 
+ */
 
 package org.ajax4jsf.application;
 
@@ -600,7 +605,7 @@ public class AjaxStateManager extends StateManager {
 			if (viewSequence++ == Character.MAX_VALUE) {
 				viewSequence = 0;
 			}
-			sessionMap.put(VIEW_SEQUENCE_ATTRIBUTE, new Integer(viewSequence));
+			sessionMap.put(VIEW_SEQUENCE_ATTRIBUTE, Integer.valueOf(viewSequence));
 		}
 		String logicalViewId = UIViewRoot.UNIQUE_ID_PREFIX + ((int) viewSequence);
 		// Store new viewId in the request parameters, to avoid re-increments in the same request.
